# jobs-search-ai

./: .gitignore  README.md  pyproject.toml
config/: criteria.yaml  sources.yaml
jobfinder/: __init__.py
jobfinder/core/: config.py  llm_scoring.py  normalize.py  schema.py  scoring.py  storage.py
jobfinder/runs/: __init__.py  diagnose_shortlist.py  export_jobs.py  llm_score_jobs.py  promote_shortlist.py  review_shortlist.py  run_jobs.py  run_saved_searches.py  score_jobs.py
jobfinder/scrapers/: doctrine.py  englishjobs.py  linkedin.py  remotech.py  remotefr.py  wttj.py
scripts/: backup.sh  restore.sh  run_pipeline.sh
web/: .env.example  .gitignore
web/app/Http/Controllers/: CandidateReviewController.php  ConsoleController.php  FalseNegativeController.php  InterestingJobController.php  JobfinderConfigController.php  SetupWizardController.php
web/app/Models/: InterestingJob.php
web/app/Services/: CoverLetterGenerator.php  CvTextExtractor.php  DatabaseSettingsManager.php  FalseNegativeReviewService.php  JobfinderConfigManager.php  JobfinderConsole.php  ProbableDuplicateFinder.php  SetupWizardFiles.php  SetupWizardGenerator.php
web/config/: applicant.php  database.php  services.php
web/resources/css/: app.css
web/resources/views/candidate-review/: index.blade.php
web/resources/views/config/: index.blade.php
web/resources/views/console/: index.blade.php
web/resources/views/false-negatives/: index.blade.php
web/resources/views/interesting-jobs/: edit.blade.php  index.blade.php
web/resources/views/layouts/: app.blade.php
web/routes/: web.php
(+1 files in other folders)
